methods.picture.PatternPicture.scala.error
Compilation error:
PatternPicture:20: error: value Gray is not a member of object java.awt.Color
  centre(Color.Gray,Color.black)
               ^